[gd_scene load_steps=5 format=3 uid="uid://bo2x8xrh0q8kr"]

[ext_resource type="Script" path="res://prog_82a.gd" id="1_b7uau"]

[sub_resource type="LabelSettings" id="LabelSettings_rqpnb"]
font_size = 32

[sub_resource type="Theme" id="Theme_6veii"]
default_font_size = 32

[sub_resource type="Theme" id="Theme_c7oyb"]
default_font_size = 32

[node name="prog82a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b7uau")

[node name="lblFine" type="Label" parent="."]
layout_mode = 0
offset_left = 350.0
offset_top = 386.0
offset_right = 837.0
offset_bottom = 446.0
text = "Fine: "
label_settings = SubResource("LabelSettings_rqpnb")

[node name="lneLimit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 350.0
offset_top = 86.0
offset_right = 749.0
offset_bottom = 166.0
theme = SubResource("Theme_6veii")
placeholder_text = "Enter Speed Limit"

[node name="lneSpeed" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 350.0
offset_top = 243.0
offset_right = 744.0
offset_bottom = 323.0
theme = SubResource("Theme_6veii")
placeholder_text = "Enter Vehicle Speed"

[node name="btnCalc" type="Button" parent="."]
layout_mode = 0
offset_left = 65.0
offset_top = 525.0
offset_right = 269.0
offset_bottom = 610.0
theme = SubResource("Theme_c7oyb")
text = "Calculate"

[node name="btnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 434.0
offset_top = 525.0
offset_right = 638.0
offset_bottom = 610.0
theme = SubResource("Theme_c7oyb")
text = "Clear"

[node name="btnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 836.0
offset_top = 525.0
offset_right = 1040.0
offset_bottom = 610.0
theme = SubResource("Theme_c7oyb")
text = "Exit
"

[connection signal="pressed" from="btnCalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btnExit" to="." method="_on_btn_exit_pressed"]
